working on a theme switcher --- think I finished

--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,12 @@
-/* .dark {
-  --dark-Blue: hsl(209, 23%, 22%);
-  --dark-bg: hsl(207, 26%, 17%);
-}
-.light {
-  --light-txt-color: hsl(200, 15%, 8%);
-  --light-input-color: hsl(0, 0%, 52%);
-  --light-bg: hsl(0, 0%, 98%);
-  --white: hsl(0, 0%, 100%);
-} */
-
 .dark {
   --bg-primary: hsl(209, 23%, 22%);
   --bg-secondary: hsl(207, 26%, 17%);
   --color-primary: white;
-  --white: hsl(0, 0, 100%);
 }
 .light {
   --bg-primary: hsl(0, 0%, 100%);
   --bg-secondary: hsl(0, 0%, 98%);
   --color-primary: black;
-  --white: hsl(0, 0, 100%);
 }
 
 .App {
@@ -31,10 +18,11 @@
 .head {
   display: flex;
   color: var(--color-primary);
+
   background-color: var(--bg-primary);
   justify-content: space-between;
   padding: 2rem 1rem;
-  box-shadow: 0 1px 3px 0px #ccc;
+  box-shadow: 0 2px 3px 0px var(--bg-secondary);
 }
 .head h1 {
   font-size: 1rem;
@@ -50,6 +38,10 @@
 .mainContent {
   padding: 1rem;
   background-color: var(--bg-secondary);
+}
+
+.content {
+  padding: 1rem;
 }
 .switcher {
   font-size: 0.9rem;
