--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   padding: 1rem;
-  background-color: var(--bg-secondary);
-  box-shadow: 0 2px 3px 0px #ccc;
+  background-color: var(--bg-primary);
+  box-shadow: 0 2px 3px 0px var(--bg-secondary);
   /* margin: 1rem; */
   margin-bottom: 1rem;
   border-radius: 6px;
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   border: none;
-  background-color: transparent;
+  background-color: var(--bg-primary);
 }
 
 .searchIcon img {
@@ -25,9 +25,13 @@
 }
 .searchInput {
   border: none;
+  background-color: var(--bg-primary);
+  margin-left: 1rem;
+  color: var(--color-primary);
 }
 ::placeholder {
   color: #ccc;
+  font-size: 0.8rem;
 }
 .searchInput:focus-visible {
   outline: none;
