--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -2,10 +2,12 @@
   margin-bottom: 1rem;
   border-radius: 6px;
   min-width: 256px;
-  width: 100%;
+  width: 256px;
   color: var(--color-primary);
   background-color: var(--bg-primary);
-  box-shadow: 0 2px 3px 0px var(--bg-secondary);
+  box-shadow: 0px 2px 3px -2px var(--shadow);
+  -webkit-box-shadow: 0px 2px 3px -2px var(--shadow);
+  -moz-box-shadow: 0px 2px 3px -2px var(--shadow);
 }
 .countryData {
   padding: 1rem 2rem;
@@ -31,4 +33,10 @@
   width: 100%;
   height: 100%;
   border-radius: 6px 6px 0 0;
+}
+
+@media (min-width: 768px) {
+  .card {
+    margin-bottom: 3rem;
+  }
 }
