--- a/src/components/FilterByRegion.module.css
+++ b/src/components/FilterByRegion.module.css
@@ -13,8 +13,9 @@
   padding: 1rem;
   margin-bottom: 6px;
   border-radius: 6px;
-  /* color: var(--color-primary); */
-  box-shadow: 0 2px 3px 0px var(--bg-secondary);
+  box-shadow: 0px 2px 3px -2px var(--shadow);
+  -webkit-box-shadow: 0px 2px 3px -2px var(--shadow);
+  -moz-box-shadow: 0px 2px 3px -2px var(--shadow);
 }
 
 .icon {
@@ -28,16 +29,16 @@
   width: 0.8rem;
   height: 0.8rem;
 }
-svg {
-  fill: yellow;
-}
 
 .options {
   position: absolute;
   z-index: 10;
-  /* background-color: var(--white); */
   width: 100%;
   background-color: var(--bg-primary);
+  border-radius: 0 0 6px 6px;
+  box-shadow: 0px 2px 3px -2px var(--shadow);
+  -webkit-box-shadow: 0px 2px 3px -2px var(--shadow);
+  -moz-box-shadow: 0px 2px 3px -2px var(--shadow);
 }
 
 .options option {
@@ -48,4 +49,15 @@ svg {
 }
 .options option:hover {
   background-color: var(--light-bg);
+}
+@media (min-width: 768px) {
+  .region {
+    width: 25%;
+  }
+  .select {
+    margin-bottom: 0;
+  }
+  .options {
+    margin-top: 6px;
+  }
 }
