--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -3,8 +3,9 @@
   align-items: center;
   padding: 1rem;
   background-color: var(--bg-primary);
-  box-shadow: 0 2px 3px 0px var(--bg-secondary);
-  /* margin: 1rem; */
+  box-shadow: 0px 2px 3px -2px var(--shadow);
+  -webkit-box-shadow: 0px 2px 3px -2px var(--shadow);
+  -moz-box-shadow: 0px 2px 3px -2px var(--shadow);
   margin-bottom: 1rem;
   border-radius: 6px;
 }
@@ -35,4 +36,13 @@
 }
 .searchInput:focus-visible {
   outline: none;
+}
+
+@media (min-width: 768px) {
+  .searchForm {
+    width: 35%;
+  }
+  .searchInput {
+    width: 100%;
+  }
 }
