--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,16 @@
     margin: 0 auto;
   }
   .head {
-    padding: 2rem 5rem;
+    /* padding: 2rem 5rem; */
+    margin: 0 auto;
+    /* padding: 2rem 5rem; */
+    width: 90%;
+  }
+  .head h1 {
+    margin-left: 1rem;
+  }
+  .switcher {
+    margin-right: 1rem;
   }
   .content {
     display: flex;
