--- a/src/components/CardDetails.module.css
+++ b/src/components/CardDetails.module.css
@@ -8,7 +8,6 @@
 
 .flag img {
   width: 100%;
-  height: 100%;
 }
 .countryData {
   margin-left: 2rem;
@@ -22,6 +21,9 @@
 .countryData h3 {
   color: var(--color-primary);
   font-weight: 700;
+  font-size: 2rem;
+  margin: 0;
+  margin-bottom: 1rem;
 }
 .mainData {
   color: var(--color-secondary);
@@ -47,4 +49,28 @@
 }
 .secondaryData h4 span {
   font-weight: normal;
+}
+.borderCountries {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-wrap: wrap;
+}
+.borderCountries h4 {
+  color: var(--color-primary);
+  margin: 0;
+  margin-right: 1rem;
+}
+.border {
+  /* width: 30px; */
+  border: 1px solid var(--bg-secondary);
+  box-shadow: 0px 1px 3px -2px var(--shadow);
+  -webkit-box-shadow: 0px 2px 3px -2px var(--shadow);
+  -moz-box-shadow: 0px 2px 3px -2px var(--shadow);
+  padding: 0.5rem 1rem;
+  color: var(--color-primary);
+  text-decoration: none;
+  background-color: var(--bg-primary);
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
 }
