--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App {
-  width: 320px;
+  min-width: 320px;
+  
   margin: 0 auto;
   background-color: var(--bg-primary);
 }
@@ -49,6 +50,11 @@
 
 .content {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 .switcher {
   font-size: 0.9rem;
@@ -70,9 +76,7 @@
     margin: 0 auto;
   }
   .head {
-    /* padding: 2rem 5rem; */
     margin: 0 auto;
-    /* padding: 2rem 5rem; */
     width: 90%;
   }
   .head h1 {
@@ -82,9 +86,10 @@
     margin-right: 1rem;
   }
   .content {
-    display: flex;
-    justify-content: space-between;
+    
+    flex-direction: row;
     flex-wrap: wrap;
+    gap: 2rem;
     width: 90%;
     margin: 0 auto;
   }
